--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Responsive Guestapo Landing Page</title>
+        <title>JSSSS</title>
     </head>
     <body>
         <script src="js/script.js"></script>
